Fix weird white spaces in table

--- a/src/style/tabling/ag_theme.scss
+++ b/src/style/tabling/ag_theme.scss
@@ -26,10 +26,6 @@
     border: none;
   }
 
-  .ag-root .ag-body-viewport:not(.ag-has-focus) .ag-cell-range-selected-1:not(.ag-cell-inline-editing) {
-    background-color: unset !important;
-  }
-
   .ag-menu {
     border: $menu-border;
     border-radius: 0px;
