--- a/src/style/tabling/index.scss
+++ b/src/style/tabling/index.scss
@@ -289,6 +289,10 @@
     .grid--data {
       max-height: calc(100% - 40px);
 
+      .ag-root .ag-body-viewport:not(.ag-has-focus) .ag-cell-range-selected-1:not(.ag-cell-inline-editing) {
+        background-color: $white !important;
+      }
+
       .ag-root-wrapper {
         overflow: visible;
         max-height: 100% !important;
@@ -396,6 +400,10 @@
         border-bottom-right-radius: 8px;
       }
 
+      .ag-root .ag-body-viewport:not(.ag-has-focus) .ag-cell-range-selected-1:not(.ag-cell-inline-editing) {
+        background-color: $table-border-color !important;
+      }
+
       .row {
         border-bottom: none !important;
 
@@ -430,6 +438,10 @@
 
       .ag-body-viewport {
         border-radius: 8px;
+      }
+
+      .ag-root .ag-body-viewport:not(.ag-has-focus) .ag-cell-range-selected-1:not(.ag-cell-inline-editing) {
+        background-color: #d3d3d3 !important;
       }
 
       .row {
